--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,11 @@
     "roots/wp-password-bcrypt": "^1.0.0",
     "rvtraveller/qs-composer-installer": "^1.1",
     "vlucas/phpdotenv": "^3.1.0",
+    "wpackagist-plugin/jetpack": "^10.0",
     "wpackagist-plugin/lh-hsts": "^1.24",
     "wpackagist-plugin/pantheon-advanced-page-cache": ">=0.3.0",
     "wpackagist-plugin/wp-native-php-sessions": ">=0.6.9",
+    "wpackagist-theme/astra": "^3.6",
     "wpackagist-theme/twentynineteen": "^1.2"
   },
   "require-dev": {
